[package]
name = "tt_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2"
futures = "0.3"
glob = "0.3"
html-escape = "0.2"
js-sandbox = "0.1"
regex = "1.5"
reqwest = { version = "0.11", features = ["rustls-tls"] }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
